<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sdroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_1">Calc</string>
    <string name="button_2">Quick Sort</string>
    <string name="button_3">Merge Sort</string>
    <string name="button_4">Start Activity</string>
    <string name="eval">Eval</string>
    <string name="tips">Example:\n(+ 2 3)\n(define x 5)\n(* 2 (+ x 1))\n(map (lambda (x) (* x 2)) (list 4 6 7))</string>
    <string name="eval_hint">Write your code here</string>
    <string name="load_resource">Load Resource</string>
</resources>
